# nba_elt_dbt

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  Makefile  Pipfile  README.md  VERSION  apuntes.md  dbt_project.yml  jacobs_notes.md  package-lock.yml  packages.yml  pyproject.toml
.ci_cd/: profiles.yml
.github/: labeler.yml  pull_request_template.md
.github/scripts/: dbt_macro_analyzer.py
.github/workflows/: auto_labeler.yml  ci_cd.yml  deploy.yml  lint.yml  macro_analyzer.yml  quality-sql.yaml  test.yml
analysis/: cleanup_reddit_posts_duplicates.sql
data/: inactive_dates.csv  schema.yml  seed_team_attributes.csv  staging_seed_player_attributes.csv  staging_seed_team_attributes.csv  staging_seed_top_players.csv  stg_seed_team_attributes.csv
docker/: Dockerfile  docker-compose-postgres.yml  docker-compose-test.yml  postgres_bootstrap.sql
macros/: append_ingestion_freshness_history.sql  bet_model_generator.sql  bronze_ingestion_check.sql  clean_player_names_bbref.sql  convert_team_names.sql  convert_team_names_flairs.sql  env_limit.sql  generate_ord_numbers.sql  generate_season_type.sql  generate_ts_percent.sql  get_env_var.sql  is_great_bet_value.sql  macro_tag.sql  schedule_haversine_miles.sql  select_test.sql
models/: sources.yml
models/ad_hoc_analytics/: bet_games_ytd.sql  bet_probs.sql  blown_leads_dynamic.sql  three_pt_shooters.sql
models/dim/: dim_players.sql  dim_players_team_history_scd2.sql  dim_players_team_history_scd2.yml  dim_players_unit_test.yml  dim_teams.sql  dim_teams_unit_test.yml  players.sql  players.yml  players_team_history_scd2.sql  players_team_history_scd2.yml  players_unit_test.yml  teams.sql  teams.yml  teams_unit_test.yml
models/fact/: boxscores.sql  boxscores.yml  fact_boxscores.sql  fact_injury_data.sql  fact_injury_data.yml  fact_odds_data.sql  fact_odds_data.yml  fact_opp_stats_data.sql  fact_opp_stats_data.yml  fact_pbp_data.sql  fact_player_stats_data.sql  fact_preseason_odds_data.sql  fact_preseason_odds_data.yml  fact_reddit_comment_data.sql  fact_reddit_comment_data.yml  fact_reddit_posts.sql  fact_reddit_posts.yml  fact_schedule_data.sql  fact_schedule_data.yml  fact_shooting_stats_data.sql  fact_shooting_stats_data.yml  fact_team_adv_stats_data.sql  fact_team_adv_stats_data.yml  fact_trade_transactions.sql  fact_trade_transactions.yml  fact_twitter_tweets.sql  injury_data.sql  injury_data.yml  nba_game_log.sql  odds_data.sql  odds_data.yml  opp_stats_data.yml  pbp_data.sql  pbp_data.yml  player_stats_data.sql  player_stats_data.yml  preseason_odds_data.sql  preseason_odds_data.yml  reddit_comment_data.sql  reddit_comment_data.yml  (+12 more)
models/gold/: bans.sql  bans.yml  contract_value_analysis.sql  contract_value_analysis.yml  exposures.yml  future_schedule_analysis.sql  future_schedule_analysis.yml  game_types.sql  game_types.yml  ingestion_freshness.sql  ingestion_freshness.yml  ingestion_freshness_history.sql  ingestion_freshness_history_view.sql  ingestion_freshness_history_view.yml  injuries.sql  injuries.yml  injury_tracker.sql  injury_tracker.yml  mov.sql  mov.yml  odds_winners_losers.sql  odds_winners_losers.yml  opp_stats.sql  opp_stats.yml  past_schedule_analysis.sql  past_schedule_analysis.yml  pbp.sql  pbp.yml  pipeline_health.sql  pipeline_health.yml  player_salary_value.sql  player_salary_value.yml  player_stats.sql  player_stats.yml  predictions.yml  preseason_odds.sql  preseason_odds.yml  recent_games_players.sql  recent_games_players.yml  recent_games_teams.sql  (+47 more)
models/marts/: bans.sql  bans.yml  contract_value_analysis.sql  contract_value_analysis.yml  future_schedule_analysis.sql  future_schedule_analysis.yml  game_types.sql  game_types.yml  injuries.sql  injuries.yml  injury_tracker.sql  injury_tracker.yml  most_recent_game.sql  mov.sql  mov.yml  nba_predictions.sql  odds_winners_losers.sql  odds_winners_losers.yml  opp_stats.sql  opp_stats.yml  past_schedule_analysis.sql  past_schedule_analysis.yml  pbp.sql  pbp.yml  player_stats.sql  player_stats.yml  preseason_odds.sql  preseason_odds.yml  prod_bans.sql  prod_bans.yml  prod_contract_value_analysis.sql  prod_contract_value_analysis.yml  prod_future_schedule_analysis.sql  prod_future_schedule_analysis.yml  prod_game_types.sql  prod_game_types.yml  prod_gamelogs.sql  prod_gamelogs.yml  prod_injuries.sql  prod_injuries.yml  (+98 more)
models/ml/: ml_betting_strategy.sql  ml_betting_strategy.yml  ml_moneyline_bins.sql  ml_moneyline_bins.yml  ml_odds_analysis_breakdown.sql  ml_odds_analysis_breakdown.yml  ml_past_games.sql  ml_past_games.yml  ml_past_games_analysis.yml  ml_past_games_analysis_aggs.sql  ml_tonights_games.sql  (+10 more)
profiles/: profiles.yml
scripts/: analyze_run_results.py
snapshots/: snapshot_injuries.sql
tests/: assert_great_bet_value_logic.sql  assert_moneyline_odds.sql  assert_player_salary_value_team_pct_sums_to_one.sql  assert_team_name_abbreviations.sql  test_clean_player_names_bbref.sql  test_generate_season_type.sql  test_missing_boxscores.sql  test_moneyline_odds.sql  test_no_missing_game_data.sql  test_playoff_boxscore_games_in_series_games.sql  test_team_name_abbreviations.sql  test_top_players.sql
(+279 files in other folders)
