[tool.poetry]
name = "nba-elt-dbt"
version = "3.2.1"
description = "dbt Transformations for NBA ELT Project"
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.9.1"
dbt-postgres = "^1.9.0"
pytz = "2023.3.post1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
sqlfluff = "3.1.0"
sqlfluff-templater-dbt = "3.1.0"
sqruff = "^0.25.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# L016 - line too long gahbage
# L016 - didnt like distinct w/ group by but im a lazy
# L026 - was having issues w/ jinja syntax
# L027 - i do select a, b instead of foo.a, vee.b - bad habit but excluding for now	
# L029 - no sql-reserved keywords as aliases - bad habit but excluding for now	
# L032 - no `using` keyword for joins - this is fine imo so fuqqit
# L034 - really fucked up my shit tbhh
# L054 - ambiguous.column_references - something with groupby / orderby ordering. i dont care
# L057 - mad that i had '%' characters in my source table column name.  bad practice but whatever
# L067 - casting style, so `select col1::text` would become `select cast(col1 as string)`.  fk that


[tool.sqlfluff.core]
templater = "dbt"
dialect = "postgres"
exclude_rules = "L016,L021,L026,L027,L029,L032,L034,L054,L057,L067"
large_file_skip_byte_limit = 100000

[tool.sqlfluff.indentation]
indented_joins = true

[tool.sqlfluff.templater.dbt]
project_dir = "./"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.jinja.padding]
single_space = true
