[project]
name = "nba-elt-dbt"
version = "3.2.4"
description = "dbt Transformations for NBA ELT Project"
authors = [{ name = "jyablonski9", email = "jyablonski9@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "dbt-core>=1.9.1,<2",
    "dbt-postgres>=1.9.0,<2",
    "pytz==2023.3.post1",
]

[dependency-groups]
dev = [
    "sqlfluff==3.1.0",
    "sqlfluff-templater-dbt==3.1.0",
    "sqruff>=0.25.16,<0.26",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.sqlfluff.core]
templater = "dbt"
dialect = "postgres"
exclude_rules = "L016,L021,L026,L027,L029,L032,L034,L054,L057,L067"
large_file_skip_byte_limit = 100000

[tool.sqlfluff.indentation]
indented_joins = true
indented_using_on = false
allow_implicit_indents = true

[tool.sqlfluff.templater.dbt]
project_dir = "./"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.jinja.padding]
single_space = true
